--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-        "node": "^12.16.2",
-        "yarn": "^1.22.0",
-        "npm": "^6.14.4"
+        "node": "12.16.2",
+        "yarn": "1.22.0",
+        "npm": "6.14.4"
     },
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
@@ -13,7 +13,7 @@
         "@testing-library/user-event": "^7.1.2",
         "@types/jest": "^24.9.1",
         "@types/node": "^12.0.0",
-        "@types/react": "^16.9.42",
+        "@types/react": "^16.9.43",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/react-router": "^5.1.8",
@@ -34,10 +34,11 @@
         "typescript": "~3.7.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "node src/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "postinstall": "tsc"
     },
     "eslintConfig": {
         "extends": "react-app"
