--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "typescript": "~3.7.2"
     },
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
