--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@types/redux": "^3.6.0",
         "@types/redux-thunk": "^2.1.0",
         "axios": "^0.19.2",
+        "bootstrap": "^4.5.0",
         "moment": "^2.27.0",
         "react": "^16.13.1",
+        "react-bootstrap": "^1.2.2",
         "react-dom": "^16.13.1",
         "react-moment": "^0.9.7",
         "react-redux": "^7.2.0",
